kubernetes/helm&yaml/traefik-v2.2-deploy/route/traefik-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
spec:
  entryPoints:
  - websecure
  tls:
    certResolver: dnspod
  routes:
    - match: Host(`willants.com`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
