kubernetes/helm&yaml/traefik-v2.2-deploy/route/wordpress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress 
spec:
  entryPoints:
  - websecure
  tls:
    certResolver: dnspod
  routes:
  - match: Host(`www.willants.com`) 
    kind: Rule
    services:
      - name: wordpress
        port: 443
